2006-03-29  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/ptouch.xml, opt/Brother-Ptouch-AdvanceDistance.xml,
	  opt/Brother-Ptouch-AdvanceMedia.xml,
	  opt/Brother-Ptouch-Align.xml,
	  opt/Brother-Ptouch-BytesPerLine.xml,
	  opt/Brother-Ptouch-ConcatPages.xml,
	  opt/Brother-Ptouch-CutMark.xml, opt/Brother-Ptouch-CutMedia.xml,
	  opt/Brother-Ptouch-HalfCut.xml,
	  opt/Brother-Ptouch-LabelPreamble.xml,
	  opt/Brother-Ptouch-MirrorPrint.xml,
	  opt/Brother-Ptouch-NegativePrint.xml,
	  opt/Brother-Ptouch-PageSize.xml,
	  opt/Brother-Ptouch-PixelTransfer.xml,
	  opt/Brother-Ptouch-PrintDensity.xml,
	  opt/Brother-Ptouch-PrintQuality.xml,
	  opt/Brother-Ptouch-Resolution.xml,
	  opt/Brother-Ptouch-RollFedMedia.xml,
	  opt/Brother-Ptouch-SoftwareMirror.xml,
	  opt/Brother-Ptouch-TransferMode.xml,
	  printer/Brother-PT-1500PC.xml, printer/Brother-PT-18R.xml,
	  printer/Brother-PT-1950VP.xml, printer/Brother-PT-1950.xml,
	  printer/Brother-PT-1960.xml, printer/Brother-PT-2420PC.xml,
	  printer/Brother-PT-2450DX.xml, printer/Brother-PT-2500PC.xml,
	  printer/Brother-PT-2600.xml, printer/Brother-PT-2610.xml,
	  printer/Brother-PT-3600.xml, printer/Brother-PT-550A.xml,
	  printer/Brother-PT-9200DX.xml, printer/Brother-PT-9200PC.xml,
	  printer/Brother-PT-9400.xml, printer/Brother-PT-9500PC.xml,
	  printer/Brother-PT-9600.xml, printer/Brother-PT-PC.xml,
	  printer/Brother-QL-500.xml, printer/Brother-QL-550.xml,
	  printer/Brother-QL-650TD.xml: Added 21 Brother P-Touch label
	  printers and the "ptouch" driver for these printers.

2006-03-15  Hidenori ISHII <hidenori.ishii@avasys.jp>

	* driver/eplaser-jp.xml, opt/159.xml, opt/2.xml,
	  opt/eplaser-jp-Model.xml,
	  printer/Epson-LP-S4500.xml,
	  printer/Epson-LP-S6500.xml
	  : Added new Epson Laser printers.

	* opt/eplaser-FaceUp.xml,
	  printer/Epson-AcuLaser_C4100PS.xml,
	  printer/Epson-AcuLaser_C4100.xml,
	  printer/Epson-EPL-N2500PS.xml,
	  printer/Epson-EPL-N2500.xml,
	  printer/Epson-EPL-N2750PS.xml,