@@ -1,6 +1,6 @@
-<printer id="printer/HP-Deskjet_F300">
+<printer id="printer/HP-DeskJet_F300">
   <make>HP</make>
-  <model>Deskjet F300</model>
+  <model>DeskJet F300</model>
   <mechanism>
     <inkjet/>
     <color/>
@@ -24,7 +24,6 @@
   </lang>
   <autodetect>
     <general>
-      <ieee1284></ieee1284>
       <manufacturer>Hewlett-Packard</manufacturer>
       <model>Deskjet F300 series</model>
       <commandset>LDL,MLC,PML,DYN</commandset>
