@@ -1,5 +1,8 @@
 2006-03-29  Till Kamppeter <till.kamppeter@gmx.net>
 
+	* printer/HP-DeskJet_F300.xml: Fixed model name and ID of this
+	  printer entry.
+
 	* driver/ptouch.xml, opt/Brother-Ptouch-AdvanceDistance.xml,
 	  opt/Brother-Ptouch-AdvanceMedia.xml,
 	  opt/Brother-Ptouch-Align.xml,
